--- a/Style/style.css
+++ b/Style/style.css
@@ -1,70 +1,102 @@
+/* General  */
 * {
-    padding: 0;
     margin: 0;
+    padding: 0;
 }
-/* the whole header part */
-.container{
-    padding-block: 56px 0px;
+@font-face {
+    font-family: Mulish-Regular;
+    src: url(../Fonts/Mulish-Regular.ttf);
 }
-/* the navbar right and left div */
-/* width = 100% - (191 / 1600) * 100 ~= 80 */
-.navbar{
-    display:flex;
+@font-face {
+    font-family: Mulish-Light;
+    src: url(../Fonts/Mulish-Light.ttf);
+}
+@font-face {
+    font-family: Mulish-Bold;
+    src: url(../Fonts/Mulish-Bold.ttf);
+}
+html {
+    font-size: 16px;
+    font-family: Mulish-Light;
+    color: rgba(31, 21, 52, 1);
+}
+img {
+    max-width: 100%;
+    height: auto;
+}
+/* Header  */
+.container {
+    width: 80%;
+    margin-inline: auto;
+}
+    /* navbar */
+.navbar {
+    display: flex;
     flex-wrap: nowrap;
     align-items: center;
     justify-content: space-between;
-    margin-inline:auto;
-    width: 80%;
+    padding-block: 56px;
+    min-width: 650px;
 }
-/* right div items in the unordered list */
-.right-div li{
+.navbar ul{
+    position: relative;
+    left: -6%;
+}
+.navbar-link {
     display: inline;
+    margin-inline-end: 1.5rem;
     
 }
-.right-div .navbar-link {
-    margin-inline-end: 32px;
-}
-.right-div .navbar-link:last-child{
-    margin-inline-end: 50px;
-}
-/* space at the start of the left div */
-.left-div img{
-    height: 41px;
-    width: 160px;
-}
-/* right div content */
-.right-div{
-    font-size: 18px;
-}
-/* styling the anchor of the li in the unordered list */
-.right-div a{
-    list-style-type: none;    
+.navbar-link a{
     text-decoration: none;
-    -webkit-text-fill-color: black;
+    opacity: 50%;
+    font-family: Mulish-Regular;
+    color: rgba(31, 21, 52, 1);
 }
-header {
+.navbar-link:first-child a{
+    font-family: Mulish-Bold;
+    opacity: 100%;
+}
+.navbar-link a:hover {
+    opacity: 100%;
+}
+.navbar-link:last-child {
+    margin-inline-end: 0;
+}
+    /* hero */
+.hero {
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.hero .text h2{
+    font-size: 3rem;
+    font-family: Mulish-Bold;
+    max-width: 82%;
+    margin-bottom: 1.5rem;
+}
+.hero .text p{
+    font-size: 1.31rem;
+    font-family: Mulish-Light;
+    color: rgba(125, 121, 135, 1);
+    max-width: 75%;
+    margin-bottom: 2.5rem;
+}
+body {
     background-image: url(../Images/element.png);
     background-repeat: no-repeat;
     background-position: left top 160px;
 }
-.hero{
-    width:80%;
-    margin-inline:auto;
-    display:flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.hero .text{
-    width: 40%;
-}
-.hero img{
-    width: 50%;
-   height: 598px;
-}
-.hero .text h2{
-    font-size: 48px;
-    margin-bottom: 20px; 
-}
-.hero .text p{
-    font-size: 21px;
+.button {
+    text-decoration: none;
+    color:rgba(255, 255, 255, 1);
+    font-size: 0.9rem;
+    font-family: Mulish-Bold;
+    background-color: rgba(69, 143, 246, 1);
+    display: inline-block;
+    padding-block: 16px;
+    text-align: center;
+    border-radius: 55px;
+    width: 30%;
 }
