Finished Download our App

--- a/Style/style.css
+++ b/Style/style.css
@@ -176,7 +176,10 @@ header {
     background-color: white;
     color:rgba(69, 143, 246, 1);
     border: solid 1.4px;
-    
+}
+.primary-button:hover {
+    background-color: rgba(69, 143, 246, 1);
+    color: white;
 }
 .our-services .primary-button {
     display: block;
@@ -222,4 +225,50 @@ header {
     line-height: 1.875rem;
     color: rgba(125, 121, 135, 1);
     margin-bottom: 38px;
+}
+.download-our-apps {
+    width: 84%;
+    margin-inline-start: auto;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    display: flex;
+    align-items: center;
+    background-image: url(../Images/element.png);
+    background-repeat: no-repeat;
+    background-position: top right 1%;
+    padding-block: 10rem;
+}
+.download-our-apps .text {
+    width: 30%;
+}
+.download-our-apps img{
+    margin-inline-end: 10%;
+}
+.download-our-apps .text h2 {
+    font-size: 2.25rem;
+    font-family: Mulish-Bold;
+    line-height: 3rem;
+    max-width: 300px;
+    position: relative;
+    margin-bottom: 64px;
+}
+.download-our-apps .text h2::after {
+    content: '';
+    display: block;
+    border-style: hidden;
+    margin-top: 32px;
+    background-color: black;
+    width: 3.5rem;
+    height: 0.125rem;
+    border-radius: 5px;
+    position: absolute;
+}
+.download-our-apps .text p {
+    font-size: 1.125rem;
+    line-height: 1.875rem;
+    color: rgba(125, 121, 135, 1);
+    margin-bottom: 38px;
+}
+.download-our-apps .text .primary-button i{
+    margin-inline-start: 0.5625rem;
 }
