--- a/Style/style.css
+++ b/Style/style.css
@@ -2,6 +2,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-weight: normal;
 }
 @font-face {
     font-family: Mulish-Regular;
@@ -227,7 +228,7 @@ header {
     margin-bottom: 38px;
 }
 .download-our-apps {
-    width: 84%;
+    width: 83%;
     margin-inline-start: auto;
     flex-wrap: nowrap;
     justify-content: space-between;
@@ -272,3 +273,109 @@ header {
 .download-our-apps .text .primary-button i{
     margin-inline-start: 0.5625rem;
 }
+.whole-testimonials{
+    width: 70%;
+    position: relative;
+    padding-inline: 4%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-image: url(../Images/element.png);
+    background-repeat: no-repeat;
+    background-position: left bottom 46px;
+    z-index: 0;
+}
+
+.blue-testimonials {
+    background-image: linear-gradient(208.18deg, #67C3F3 9.05%, #5A98F2 76.74%);
+    background-repeat: no-repeat;
+    padding-block: 64px 91px;
+    padding-inline: 128px;
+    border-radius: 24px;
+    position: relative;
+    margin-bottom: 36px;
+}
+.blue-testimonials::after {
+    content: url(../Images/Group.png);
+    position: absolute;    
+    right: -45px;
+    top: -15px;
+}
+.blue-testimonials h2{
+    font-size: 2.25rem;
+    font-family: Mulish-Bold;
+    color: white;
+    text-align: center;
+    position: relative;
+    margin-bottom: 86px;
+}
+.blue-testimonials h2::after{
+    content: '';
+    display: block;
+    border-style: hidden;
+    margin-top: 28px;
+    background-color: white;
+    width: 3.5rem;
+    height: 0.125rem;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 5px;
+    position: absolute;
+}
+.blue-testimonials .founder {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+    width: 98%;
+    margin-inline: auto;
+}
+.blue-testimonials .founder p{
+    font-size: 1.1875rem;
+    line-height: 1.875rem;
+    color: rgba(255, 255, 255, 0.9);
+    font-family: Mulish-Regular;
+    max-width: 405px;
+}
+.blue-testimonials .founder img{
+    border-radius: 50% 50%;
+    border: solid white 4px;
+}
+.blue-testimonials .founder .founder-text {
+    margin-inline-end: 85px;
+}
+.blue-testimonials .founder .founder-text h5{
+    font-size: 1.375rem;
+    font-family: Mulish-Bold;
+    color: rgba(255, 255, 255, 1);
+    margin-bottom: 5px;
+}
+.blue-testimonials .founder .founder-text h6{
+    font-size: 1.125rem;
+    font-family: Mulish-Regular;
+    color: rgba(255, 255, 255, 0.85);
+}
+.whole-testimonials .slider {
+    width: 60%;
+    margin-inline: auto;
+    position: relative;
+    min-width: 650px;
+}
+.whole-testimonials .slider .elements {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.whole-testimonials .slider .elements a:first-child{
+    margin-inline-end: 92px;
+    color: rgba(69, 143, 246, 1);
+    opacity: 50%;
+}
+.whole-testimonials .slider .elements a:last-child {
+    margin-inline-start: 92px;
+    color: rgba(69, 143, 246, 1);
+    opacity: 100%;
+}
+.whole-testimonials .slider .elements img{
+    margin-inline: 6px;
+}
+
