--- a/Style/style.css
+++ b/Style/style.css
@@ -9,6 +9,10 @@
     src: url(../Fonts/Mulish-Regular.ttf);
 }
 @font-face {
+    font-family: Mulish-SemiBold;
+    src: url(../Fonts/Mulish-SemiBold.ttf);
+}
+@font-face {
     font-family: Mulish-Light;
     src: url(../Fonts/Mulish-Light.ttf);
 }
@@ -237,7 +241,7 @@ header {
     background-image: url(../Images/element.png);
     background-repeat: no-repeat;
     background-position: top right 1%;
-    padding-block: 10rem;
+    padding-block: 20rem;
 }
 .download-our-apps .text {
     width: 30%;
@@ -282,7 +286,7 @@ header {
     background-image: url(../Images/element.png);
     background-repeat: no-repeat;
     background-position: left bottom 46px;
-    z-index: 0;
+    margin-bottom: 20rem;
 }
 
 .blue-testimonials {
@@ -377,5 +381,89 @@ header {
 }
 .whole-testimonials .slider .elements img{
     margin-inline: 6px;
+}
+
+
+.article{
+    background-image: url(../Images/element2.png) ;
+    background-repeat: no-repeat;
+    background-position: top 22.5% left 13%;
+    position: relative;
+
+}
+.article h3 {
+    font-size: 2.25rem;
+    font-family: Mulish-Bold;
+    text-align: center;
+    position: relative;
+    margin-bottom: 8rem;
+}
+.article::after{
+    content: '';
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translateX(-50%);
+    width:auto;
+    height: 100%;
+    background-image: url(../Images/VectorNearFooter.png);
+    background-repeat: no-repeat;
+    opacity: 60%; 
+    z-index: -1; 
+}
+.article h3::after {
+    content:'';
+    display: block;
+    border-style: hidden;
+    margin-top: 32px;
+    background-color: black;
+    width: 3.5rem;
+    height: 0.125rem;
+    border-radius: 5px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.article .article-cards {
+    display: flex;
+    flex-wrap:nowrap;
+    margin-inline:auto;
+    justify-content: center;
+    width: 72%;
+    
+}
+.article .article-cards .a-card {
+    margin-inline: 15px;
+    background-color: rgba(255, 255, 255, 1);
+    box-shadow: 10px 40px 50px 0px rgba(229, 233, 246, 0.4);
+    border-radius: 20px;
+}
+.article .article-cards .a-card img{
+    border-radius: 20px 20px 0 0;
+}
+.article .article-cards .a-card .card-text {
+    padding: 20px 30px 40px;
+}
+.article .article-cards .a-card h4{
+    font-size: 1.3125rem;
+    font-family: Mulish-Bold;
+    line-height: 2rem;
+    max-width: 260px;
+    margin-bottom: 8px;
+}
+.article .article-cards .a-card p {
+    line-height: 1.75rem;
+    color: rgba(125, 121, 135, 1);
+    max-width: 261px;
+    margin-bottom: 20px;
+}
+#link {
+    text-decoration: none;
+    font-family: Mulish-SemiBold;
+    color: rgba(64, 137, 237, 1);
+    font-size: 1.0625rem;
+}
+#link i{
+    margin-inline-start: 10px;
 }
 
